--- a/app/views/search_songs/search_results.html.erb
+++ b/app/views/search_songs/search_results.html.erb
@@ -13,7 +13,8 @@
           <p class="text-gray-900 mb-2"><strong class="text-gray-700 text-sm font-bold">Artist:</strong> <%= hit["result"]["primary_artist"]["name"] %></p>
         </div>
         <div class="text-left">
-          <%= link_to "歌詞を見る", lyrics_search_song_path(hit["result"]["id"], url: hit["result"]["url"], title: hit["result"]["title"], artist_name: hit["result"]["primary_artist"]["name"]), class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" %>
+          
+          <%= link_to "歌詞を見る", lyrics_search_songs_path(hit: hit), class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" %>
         </div>
       </div>
     <% end %>
